# parts2kicad

./: .gitignore  LICENSE  README.md  README_pypi.md  mouser2kicad.py  pyproject.toml  tokenizer.py
src/mouser2kicad/: __init__.py  fprints.py  main.py  models.py  sexp.py  symbols.py  term.py
tests/: test_sexp.py
