[project]
name = "mouser2kicad"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "importlib>=1.0.4",
    "requests>=2.32.5",
    "uv-build>=0.9.13",
    "colorama>=0.4.6",
    "selenium>=4.38.0"
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[build-system]
requires = ["uv-build>=0.9.13"]
build-backend = "uv_build"

[project.scripts]
m2k = "mouser2kicad.main:main"



